--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:name=".CaptumiaApplication"
         android:theme="@style/AppTheme" >
-        <activity android:name=".ui.MainMenuActivity" >
+        <activity android:name=".ui.MainMenuActivity"
+                  android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
