--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".CaptumiaApplication"
+        android:name=".app.CaptumiaApplication"
         android:theme="@style/AppTheme" >
         <activity android:name=".ui.content.MainMenuActivity"
                   android:screenOrientation="portrait"
@@ -48,8 +48,7 @@
             >
         </activity>
 
-        <activity android:name=".ui.forms.AddPostActivity"
-                  android:label="@string/add_service"
+        <activity android:name=".ui.forms.AddServiceActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/ActionBarActivityTheme"
             >
